# st-copy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  release-please-config.json
.github/workflows/: pre-commit.yml  python-publish.yml  release-please.yml  test.yml
examples/: app.py
src/st_copy/: __init__.py  pyproject.toml
src/st_copy/frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
src/st_copy/frontend/src/: CopyButton.css  CopyButton.test.tsx  CopyButton.tsx  index.test.ts  index.ts  index.tsx  main.tsx
tests/: e2e_copy.py  test_api.py  test_build.py  test_integration.py
