[project]
name = "st-copy"
version = "1.1.2"
description = "Streamlit copy‑to‑clipboard button component"
readme = "README.md"
authors = [{ name = "Aleksandr Filippov", email = "alex-feel.saga628@passmail.com" }]
requires-python = ">=3.10"
# Streamlit version/features info
# components.v2.component (frameless custom components): 1.51.0 (introduced; https://docs.streamlit.io/develop/quick-reference/release-notes/2025)
# ComponentResult return type (renamed from BidiComponentResult): 1.56.0 (https://docs.streamlit.io/develop/quick-reference/release-notes/2026)
# (optional) st.chat_message – only in the demo app: 1.24.0 (chat elements introduced; https://docs.streamlit.io/1.24.0/develop/api-reference/chat/st.chat_message)
# (optional) streamlit.testing.v1.AppTest – only in test‑suite: 1.28.0 (AppTest helper first documented; https://docs.streamlit.io/1.28.0/develop/api-reference/app-testing/st.testing.v1.apptest)
dependencies = [
  "streamlit>=1.56.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true

[tool.hatch.build.targets.sdist]
include = [
  "src/st_copy/frontend/dist/**",
  "src/st_copy/pyproject.toml",
  "src/st_copy/py.typed",
  "src/st_copy/__init__.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/st_copy"]
# Ship only the built frontend bundle (the v2 ES module + CSS), never the
# frontend sources or node_modules. The build output is git-ignored, so it is
# force-included after excluding the rest of the frontend directory.
exclude = ["src/st_copy/frontend"]

[tool.hatch.build.targets.wheel.force-include]
"src/st_copy/frontend/dist" = "st_copy/frontend/dist"

[dependency-groups]
dev = [
  "hatchling>=1.27.0",
  "playwright>=1.52.0",
  "pre-commit>=4.2.0",
  "pytest-cov>=6.1.1",
  "pytest>=8.3.5",
  "streamlit>=1.56.0",
]

[tool.ruff]
# General settings
target-version = "py310"
line-length = 127

[tool.ruff.lint]
# Enable rule groups
select = [
  "E", "W", "F",  # basic Flake8
  "I",  # isort (import order)
  "Q",  # flake8‑quotes
  "SIM",  # flake8‑simplify
  "N",  # pep8‑naming
  "ARG",  # flake8‑unused‑arguments
]

# flake8‑quotes: prefer single quotes
[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "double"

# isort subsection
[tool.ruff.lint.isort]
known-first-party = ["st_copy"]
force-single-line = true
