# Runtime metadata for Streamlit Custom Components v2.
#
# This file is shipped INSIDE the installed package (next to __init__.py) so
# Streamlit's component manifest scanner can locate this component's built
# frontend assets at runtime. It is NOT the build configuration for the package
# (that is the repository-root pyproject.toml). Streamlit only reads:
#   * [project].name -- used to namespace the component as "<name>.st_copy"
#   * [[tool.streamlit.component.components]] -- the component registry entry
# No version is declared here; Streamlit falls back to the installed
# distribution version. Do not add build-system/dependencies here.
[project]
name = "st-copy"

[[tool.streamlit.component.components]]
name = "st_copy"
asset_dir = "frontend/dist"
